# swagger-client

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .pre-commit-config.yaml  .travis.yml  README.md  generate_client.sh  git_push.sh  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/: dependabot.yml
.openapi-generator/: FILES
docs/: Attributes.md  AttributesOrderStatus.md  AttributesPrealertCloser.md  AttributesPrintForm.md  BarcodeInsert.md  BarcodesApi.md  BasketBaseDb.md  BasketsApi.md  BotBase.md  BotBaseDb.md  BotsApi.md  BrandCount.md  CategoriesApi.md  CategoryBase.md  CdekWebhook.md  CentimeterBase.md  DeliveriesCdekApi.md  DeliveryCdekBase.md  DeliveryCdekUpdate.md  DimensionBase.md  HTTPValidationError.md  InfoItemInsert.md  InfoItemUpdate.md  InfoItemUpdateNew.md  InfoItemsApi.md  InsertBarcode.md  InsertBasket.md  InsertBot.md  InsertMessageTg.md  InsertOrder.md  InsertScheduler.md  InsertTBankKassa.md  InsertTBankPayment.md  InsertUserProdavecKrossovok.md  InsertYookassaPayment.md  ItemBase.md  ItemBaseDb.md  ItemsApi.md  LocationInner.md  MessageResponse.md  (+48 more)
scripts/: generate_client.sh  git_push.sh  git_push_tags.sh
swagger_client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
test/: test_attributes.py  test_attributes_order_status.py  test_attributes_prealert_closer.py  test_attributes_print_form.py  test_barcode_insert.py  test_barcodes_api.py  test_basket_base_db.py  test_baskets_api.py  test_bot_base.py  test_bot_base_db.py  test_bots_api.py  test_brand_count.py  (+76 more)
(+92 files in other folders)
